Wed Mar 23 10:39:38 2016  Koichi ITO  <koic.ito@gmail.com>

	* variable.c: Added documentation about order of `Module#constants`
	  [ci skip][Bug #12121][ruby-dev:49505][fix GH-1301]

Tue Mar 22 21:08:30 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* include/ruby/oniguruma.h: Additional flag for characters that are titlecase.

	* enc/unicode/case-folding.rb, casefold.h: Using above flag in data.

	* enc/unicode.c: Marking capitalized character as unmodified if it is
	  already titlecase.

	* test/ruby/enc/test_case_mapping.rb: Tests for above functionality.

Tue Mar 22 14:18:59 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (lambda_body, parser_yylex): warn mismatched indentation
	  of lambda block.

Tue Mar 22 11:36:49 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* time.c (wmul): wrong condition.
	  fixed many test failures on 32bit and LLP64 platforms.

Tue Mar 22 10:31:34 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* time.c (wdiv, wmod): wdivmod0() assumes the 3rd and the 4th arguments
	  are valid pointers.
	  maybe checking them in wdivmod0() is better manner, but I guess that
	  passing real dummy pointers may be faster than checking and branching
	  in wdivmod0().
	  this commit fixes SEGV on 32bit and LLP64 platforms.

Tue Mar 22 10:24:04 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* time.c (divmodv): void function never returns any value.

Tue Mar 22 10:11:01 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/lib/test/unit.rb (Test::Unit::StatusLine#failed): print
	  failed messages only if replacing mode, otherwise defer them
	  until the end, to get rid of interleaving failures with progress
	  messages.  refix r54195.

Tue Mar 22 03:45:03 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* time.c (MUL_OVERFLOW_FIXWV_P): defined for FIXWV.

	* time.c (wmul): use MUL_OVERFLOW_FIXWV_P and only switch.

	* time.c (wmul): use mul which has Fixnum optimization.

	* time.c (rb_time_magnify): If WIDEVALUE_IS_WIDER, wmul() has the same