@@ -1,3 +1,12 @@
+Wed Mar 23 11:38:47 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* cygwin/GNUmakefile.in (MSYS2_ARG_CONV_EXCL_PARAM):
+	  * add missing parentheses and remove double quotes.
+	  * rename to get rid of recursive references.
+	  * as --excludes-dir option is for a path name, its argument
+	    should be converted.
+	  [ruby-dev:49526] [Bug #12199]
+
 Wed Mar 23 10:39:38 2016  Koichi ITO  <koic.ito@gmail.com>
 
 	* variable.c: Added documentation about order of `Module#constants`
